--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(opengl-cmake)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -16,16 +16,15 @@ include(cmake/ShaderString.cmake)
 ShaderString()
 
 find_package(OpenGL REQUIRED)
-find_package(fmt REQUIRED)
 find_package(glad REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
 
 set(CORE_SOURCES
-    src/core/mesh.cpp
-    src/core/mesh.h
-    src/core/shader.cpp
-    src/core/shader.h
+    src/core/geometry.cpp
+    src/core/geometry.h
+    src/core/shaders.cpp
+    src/core/shaders.h
     src/core/timer.h
     src/core/window.cpp
     src/core/window.h
@@ -42,4 +41,4 @@ target_include_directories(opengl-cmake PRIVATE
     ${CMAKE_SOURCE_DIR}/libs
 )
 
-target_link_libraries(opengl-cmake PRIVATE fmt::fmt glfw glad::glad glm::glm OpenGL::GL)
+target_link_libraries(opengl-cmake PRIVATE glfw glad::glad glm::glm OpenGL::GL)
